# pmc-data-extraction

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  convert_npz_to_npy.py  outputs.txt  outputs_1gpu.txt  outputs_1gpu_bytes.txt  outputs_2gpu_bytes.txt  outputs_2gpu_bytes_nw0.txt  outputs_bytes.txt  outputs_bytes_1.txt  pyproject.toml  script.sh  test.py  trian_test_split.py
.github/workflows/: code_checks.yml  integration_tests.yml
BiomedCLIP-PubMedBERT_256-vit_base_patch16_224/: tokenizer_config.json
docs/: README.md
openpmcvl/: __init__.py
openpmcvl/Build-PMC-OA/: run_examples.sh
openpmcvl/Build-PMC-OA/src/: fetch_oa.py
openpmcvl/anatomy/: README.md
openpmcvl/classification/: classifier.py  classifier.sh
openpmcvl/cli/: README.md
openpmcvl/experiment/: README.md  __init__.py  requirements.txt
openpmcvl/experiment/configs/: __init__.py
openpmcvl/experiment/datasets/: __init__.py  biomedica.py  deepeyenet.py  ham10000.py  imageCLEF.py  lc25000.py  med_mnist_plus.py  medsam.py  mimiciv_cxr.py  pad_ufes_20.py  pmc2m_sum.py  pmcoa.py  pmcoa_2.py  pmcoa_3.py  pmcoa_4.py  pmcpatients.py  pmcvl.py  quilt1m.py  roco.py  subfigures_biomedica.py
openpmcvl/experiment/diagnosis/: retrieval_recall.py  run.slrm
openpmcvl/experiment/modules/: __init__.py  contrastive_pretraining_ppr.py  encoders.py  losses.py  metrics.py  metrics_backup_1.py  metrics_backup_2.py  pmc_clip.py  pubmedclip.py  scheduler.py  tasks.py  tokenizer.py  zero_shot_classification.py  zero_shot_retrieval.py
openpmcvl/experiment/scripts/: checkpoints.sh  experiments.csv
openpmcvl/experiment/tests/: test_datasets.py  test_encoders.py  test_metrics.py
openpmcvl/experiment/working/: add_new_modality.py  biomedclip_model_cfg.yaml  change_test_split.py  clean_faulty_files.py  clean_pmc2m_sum.py  explore_pmcpatients.py  intersect_openpmcvl_pmcpatients.py  load_biomedclip.py  (+4 more)
openpmcvl/foundation/: README.md  README.zh.md  README_2.md  requirements.txt  run.sh  setup.py
openpmcvl/granular/: README.md
openpmcvl/models/: subfigure_detector.py
openpmcvl/pipeline/: align.py  align.sh  subcaption.py  subcaption.sh  subfigure.py  subfigure.sh
openpmcvl/probe/: README.md  classifier.py  classify.sh  classify.slrm  dev.sh
openpmcvl/process/: align_metric.py  data_preprocess.py  dataset_exsclaim.py  inference.py  model_det_align.py  playground_inference_detect_align.py  playground_subfigure_ocr.py  pmc_oa.py  subcaption.ipynb  subfigure.ipynb  subfigure_ocr.py  train_clip_align.py
openpmcvl/statistical_analysis/: MMD.py
openpmcvl/utils/: clean_by_format.py  compute_text_lengths.py  compute_text_lengths.slrm  run.slrm
scripts/: README.md
tests/: README.md  __init__.py  test_empty.py  test_none.py
working/Build-PMC-OA/: extract_pairs.sh  setup.py
working/classifier/: classifier.py  extract_mkw.py
working/process/: GPTsubcap_postprocess.py  README.md  align_metric.py  augmentation_tools.py  data_preprocess.py  dataset_clip_align.py  dataset_det_align.py  dataset_exsclaim.py  detect_metric.py  inference.py  inference_clip_align.py  inference_detect_align.py  model_clip_align.py  model_det_align.py  pmc_oa.py  subfigure_classify.py  subfigure_ocr.py  train_clip_align.py  train_detect_align.py  train_engine.py  transformer_module.py  visualization_tools.py
working/utils/: clean_by_format.py  compute_text_lengths.py  create_captions_folder.py  dir_or_file.py  histogram_text_lengths.ipynb  train_test_split.py
(+287 files in other folders)
